--- a/intro.tex
+++ b/intro.tex
@@ -1,14 +1,14 @@
-Power quality research is a subset of power distribution research which focuses on studying  deviations from nominal power grid operating conditions. Devices connected to the power grid, as well as the distribution equipment expect a certain frequency, voltage and harmonic content of the voltage waveform they operate on. While most equipment maintains some hysteresis with respect to deviations from the nominal, large enough deviations may cause equipment failure and instability in the power grid as a whole. In a practical sense, power quality monitoring concerns itself with monitoring, collecting and analyzing power quality anomalies on a live and functioning grid. In some cases, for example when performed by the utility, this information is used to make real-time decisions, to maintain the stability of the power grid. However, data collected by the power quality monitoring equipment, can also be used to diagnose local power quality problems, or to further power quality research. Power quality monitoring fit's very well into the paradigm of remote sensing and sensor networks, particularly into the newly emerging field of edge computing. Edge computing goes beyond the naive approach of transmitting the entirety of the collected data from the sensor location, and extends it by either feature extracting, preprocessing or filtering the data at the computing node itself. This research project will investigate the design the design, implementation, and evaluation of a novel edge computing architecture  called Napali which combines feature extraction at the edge level and two way communication between the sink and the edge node which will be applied to the power quality monitoring domain.
+Power quality research is a subset of power distribution research which focuses on studying  deviations from nominal power grid operating conditions. Devices connected to the power grid, as well as the distribution equipment expect a certain frequency, voltage and harmonic content of the voltage waveform they operate on. While most equipment maintains some hysteresis with respect to deviations from the nominal, large enough deviations may cause equipment failure and instability in the power grid as a whole. In a practical sense, power quality monitoring concerns itself with monitoring, collecting and analyzing power quality anomalies on a live and functioning grid. In some cases, for example when performed by the utility, this information is used to make real-time decisions, to maintain the stability of the power grid. However, data collected by the power quality monitoring equipment can also be used to diagnose local power quality problems, or to further power quality research. Power quality monitoring fits very well into the paradigm of remote sensing and sensor networks, particularly into the newly emerging field of edge computing. Edge computing goes beyond the naive approach of transmitting the entirety of the collected data from the sensor location, and extends it by either feature extracting, preprocessing or filtering the data at the computing node itself. This research project will investigate the design, implementation, and evaluation of a novel edge computing architecture called Napali which combines feature extraction at the edge level and two way communication between the sink and the edge node which. I will evaluate Napali in part by implementing it in the power quality monitoring domain.
 
 \section{Overview of power grids}
 Modern power grids are hierarchically structured. Higher voltage is useful for transporting electricity over long distances, connecting cities and towns to power generation facilities. Transmissions lines of 100kV and above are used to minimize losses in long distance runs, since the same amount of power can be transmitted using much lower current, and thus much more efficiently, then the comparable low voltage line. Close to the point of distribution, transmission voltage is stepped down to 1kV-40kV range using large power transformers. This is done because the losses incurred in the final leg of transmission are minimal, while extremely high voltage equipment is expensive and requires special precautions.\cite{sivanagaraju2008electric} Finally, at the consumer level the voltage level is stepped down once more to the household voltage, for example $120V_{ac}$ for North America. It is important to note that voltage across every part of the power grid is synchronized to a phase and frequency set by the utility. This allows multiple power producers to contribute to electricity generation without interfering with each other.\cite{blaabjerg2006overview} In North America the 60Hz utility frequency is used as the baseline, and its long term stability is guaranteed by the power company. How close the power AC frequency is to the nominal value is a measure of how closely the electricity demand is balanced by the electricity generation. 
 
 Traditional power generation sources involves applying mechanical torque to an alternating current generator. If the load on the generator increases without increasing the torque, it will slow down the generator and thus the utility frequency decreases. Similarly, if the demand drops but the torque is not decreased, the frequency of generated power will increase. Even small deviations in frequency can have adverse effects on equipment which runs synchronous to the power grid, such as synchronous electric motors and other industrial equipment.\cite{morren2006wind} Nonlinear loads, or loads that don't draw a consistent amount of current through out an AC cycle, are highly prevalent in today's power grid. These devices contribute to the harmonic noise in power system in both current and voltage waveform. This effect, known as harmonic distortion, can have various unintended consequences on the power distribution system and connected devices. The current harmonic distortion affects the efficiency of the distribution network, while voltage harmonics may propagate across the power distribution infrastructure and affect neighboring devices.\cite{muhamad2007effects} Distributed renewable generation may also create untended harmonics. Distributed generators are commonly DC systems, which utilize inverters to generate in phase AC waveform to feed into the power grid. Depending on the inverter design the AC waveform may have spurious harmonics present.\cite{morren2006wind} 
 
-Large and sudden changes in load to generation ratio change do not immediately impact the utility frequency due to the rotational inertia of the large generation systems. Instead it will cause the line voltage to change proportional to the load until the generation can catch up. If the load suddenly increases, caused for example by a large motor stall, grid voltage will experience a sharp drop, known as a sag. Similarly a large load drop will cause an voltage increase, cased a swell. Voltage sags and swells propagate throughout the entire grid infrastructure, however the dynamics of the power grid are quite complex, and hard to predict. For example a voltage sag on one sub-transmission chain may manifest and as a voltage swell in another. Finally very fast changes in load, such as short circuits, opening and closing of re-closers, and lightning strikes manifest as voltage transients. Voltage transients are energetic short-lived swells on the order of a single AC cycle, which can travel across the distribution grid. Transients may interfere with sensitive grid connected equipment, as well as trigger protection equipment such as uninterpretable power supplies, and other over-voltage protection devices. Transients, harmonic distortion, and RMS fluctuations and combinations there of make up the majority of power quality problems which affect the voltage waveform in the grid connected devices. \cite{5154067} All of these issues can cause power quality problems, as will be discussed further in Section \ref{intro:sec:pq}.
+Large and sudden changes in load to generation ratio change do not immediately impact the utility frequency due to the rotational inertia of the large generation systems. Instead it will cause the line voltage to change proportional to the load until the generation can catch up. If the load suddenly increases, caused for example by a large motor stall, grid voltage will experience a sharp drop, known as a sag. Similarly a large load drop will cause an voltage increase, called a swell. Voltage sags and swells propagate throughout the entire grid infrastructure, however the dynamics of the power grid are quite complex, and hard to predict. For example a voltage sag on one sub-transmission chain may manifest and as a voltage swell in another. Finally very fast changes in load, such as short circuits, opening and closing of re-closers, and lightning strikes manifest as voltage transients. Voltage transients are energetic short-lived swells on the order of a single AC cycle, which can travel across the distribution grid. Transients may interfere with sensitive grid connected equipment, as well as trigger protection equipment such as uninterpretable power supplies, and other over-voltage protection devices. Transients, harmonic distortion, and RMS fluctuations and their combinations make up the majority of power quality problems which affect the voltage waveform in the grid connected devices. \cite{5154067} All of these issues can cause power quality problems, as will be discussed further in Section \ref{intro:sec:pq}.
 
 \section{Edge computing approach to anomaly detection}\label{intro:edge}
-Edge computing is an emergent field in distributed systems. Edge computing is a consequence of ever decreasing power consumption of computational utilities found on the sensor nodes, as well as incremental improvements in battery technology. With ever-increasing margin for computational resources in sensor networks, it becomes possible to process and store the acquired data on the device itself, as opposed to the centralized sink. Thus the idea of edge computing leverages available computing power of the sensor node to allow for smarter distributed sensing. Edge computing with respect to remote sensing allows for several new approaches to anomaly detection. Anomaly detection is a common topic across many disciplines and domains. In cyber-security research, anomalous network traffic and program behavior is often indicative of malicious behavior. In seismic monitoring, anomalies in ground vibrations may be precursors to an earthquake or a volcano eruption. In observational astronomy, anomaly detection is used for detection of transient events such as gamma ray bursts. Sensor networks are commonly tasked with anomaly detection and must often act on them. Traditionally, stringent constraints on power consumption of battery powered wireless sensor network nodes mean that low bandwidth and low complexity methods are preferred. Furthermore, many sensor networks are often hindered by local noise, thus requiring higher level filtering in order and in network processing to determine if an anomaly has occurred. If the signal to noise of the local measurements is quite high this problem becomes trivial: one simply collects all the distributed measurements if one or more of the measurements indicates an anomaly. Unfortunately, in the real world such problems are rare and instead the distributed signal is dominated by extraneous local noise. For example individual seismic sensors can`t distinguish between a global anomaly such as an earthquake and local noise such as vibration caused by a passing semi-truck. The problem of global anomaly detection with distributed sensing has been thoroughly explored in self organizing wireless sensor networks. However, these approaches are insufficient in the paradigm of edge computing. Edge computing relies on Internet for transport, and thus the cost of communicating with the local sink and the local node is similar. Indeed in some cases it is impossible to achieve node-to-node communication without an intermediary due to firewalls, and other security mechanisms. In my research I will only consider approaches which rely on a sink node to facilitate anomaly detection.
+Edge computing is an emergent field in distributed systems. Edge computing is a consequence of ever decreasing power consumption of computational devices found on the sensor nodes, as well as incremental improvements in battery technology. With ever-increasing computational capabilities in sensor networks, it becomes possible to process and store the acquired data on the device itself, as opposed to the centralized sink. Thus the idea of edge computing leverages available computing power of the sensor node to allow for smarter distributed sensing. Edge computing with respect to remote sensing allows for several new approaches to anomaly detection. Anomaly detection is a common topic across many disciplines and domains. In cyber-security research, anomalous network traffic and program behavior is often indicative of malicious behavior. In seismic monitoring, anomalies in ground vibrations may be precursors to an earthquake or a volcano eruption. In observational astronomy, anomaly detection is used for detection of transient events such as gamma ray bursts. Sensor networks are commonly tasked with anomaly detection and must often act on them. Traditionally, stringent constraints on power consumption of battery powered wireless sensor network nodes mean that low bandwidth and low complexity methods are preferred. Furthermore, many sensor networks are often hindered by local noise, thus requiring higher level filtering in order and in network processing to determine if an anomaly has occurred. If the signal to noise of the local measurements is quite high this problem becomes trivial: one simply collects all the distributed measurements if one or more of the measurements indicates an anomaly. Unfortunately, in the real world such problems are rare and instead the distributed signal is dominated by extraneous local noise. For example individual seismic sensors can`t distinguish between a global anomaly such as an earthquake and local noise such as vibration caused by a passing semi-truck. The problem of global anomaly detection with distributed sensing has been thoroughly explored in self organizing wireless sensor networks. However, these approaches are insufficient in the paradigm of edge computing. Edge computing relies on Internet for transport, and thus the cost of communicating with the local sink and the local node is similar. Indeed in some cases it is impossible to achieve node-to-node communication without an intermediary due to firewalls, and other security mechanisms. In my research I will only consider approaches which rely on a sink node to facilitate anomaly detection.
 
 There are several solutions for dealing with the local noise problem in an Internet-enabled sensor network. A naive solution is to simply record every distributed measurement to a centralized data sink. This sink, as well as the infrastructure down stream of it has a view of the entire state of the system and can thus detect anomalies using either real-time or batch processing. An alternative to sending all of the distributed measurements to the sink is to let the individual sensors decide which temporal regions of the measurement constitute an anomaly. This approach, called self triggering, has a benefit of the reducing the bandwidth constraints for each sensor without the requirement for two way communication between the sensor and the sink.
 
@@ -19,7 +19,7 @@ I propose a framework called Napali which combines the strengths of the previous
 \begin{figure}[h]
 	  \centering
 	  \includegraphics[width=0.5\linewidth]{img/edge_computing_vs.pdf}
-	\caption{Comparison of the three event detection methodology across three metrics. Methods are as follows: naive method(2), self triggering(1), Napali, hybrid solution(3)}
+	\caption{Comparison of the three event detection methodology across three metrics. Methods are as follows: naive method (2), self triggering (1), Napali, hybrid solution (3)}
 	\label{intro:fig:edge}
 \end{figure}
 The naive method provides the best detection ability and the smallest node computation requirement. However, it does so at the cost of the largest bandwidth consumption. The self triggering method has the lowest bandwidth consumption of the three. The disadvantage of this method is twofold. First of all in order to maintain a high detection rate a reasonably low threshold for anomalies has to be used. This may cause a large number of false positives due to local noise and sensor noise. Secondly, global anomalies will often diminish in magnitude as a function of distance from the epicenter, thus far removed sensor nodes may completely miss events. These low threshold events may be invaluable for reconstructing the dynamic of the anomaly propagation, however they will be missed by the detection algorithms. Napali's hybrid approach provides the opportunity for much better anomaly detection rate and background noise rejection, by correlating the features that are computed on the sensor nodes. Napali has moderate bandwidth consumption, however the bandwidth consumption is tunable since the features can be computed for varied temporal windows length of which can be adjusted in real time. Napali does requires the highest sensor node computing power, since not only does it need to extract the triggering features from from raw data, it needs to maintain a buffer of sensor measurements to send to the sink if an anomaly is detected.
@@ -70,7 +70,7 @@ Power quality monitoring along with other smart grid domains is a field well sui
 	\label{intro:fig:1}
 \end{figure}
 
-Residential power quality monitoring presents a number of issues. First of all, it is difficult to discern which side of the utility meter a power disturbance came from. Consider a voltage sag generated by a 1kW hot plate shown in figure \ref{intro:fig1:sub1}.  Since the output impedance of the power grid is non-zero a high powered device can cause a significant voltage sag affecting every device connected to the same circuit. Secondly, recoding the voltage waveform resulting from non linear load can result in privacy leaks for the end user. Consider the voltage waveform produced by a PC running a video game as shown in figure \ref{intro:fig1:sub2}. Throughout the game loading process the power load varies based on which components are in use. Furthermore, regions with CPU load, harddisk load and video card load can be readily identified by measuring the resulting voltage sag. Recording these event's has an adverse effect on end-users privacy and offers no immediate benefit in studying grid stability. Finally distributed power generation such as rooftop solar has significant effect on the residential voltage waveform. Consider the voltage waveform shown in figure \ref{intro:fig1:sub3}. This waveform was recorded over 24 hours in a household with a rooftop photovoltaic installation. Similar to the voltage sag case since the power grid impedance is non-zero residential power generation will cause a voltage swell during peak hours of sunlight as evident by the waveform. Combined with the global voltage sag during hours of peak demand (3pm) combined with the lack of PV production during that time, photovoltaics installations can result in a daily $10V_{rms}$ swing. Residential power quality monitoring can be accomplished via a distributed sensor network made up of power quality monitoring devices with high degree of penetration across the end points of a power grid. Furthermore, in order to monitor the dynamics of the entire power grid via residential line voltage monitoring it is imperative to monitor across multiple locations simultaneously. This combined with temporal and spatial correlations of data produced by the sensors allows for identification of grid wide anomalies without a high rate of false positives. Additionally, not all power quality events affect the entire grid, due to the hierarchical structure of the power distribution. The final requirement for grid-wide monitoring is a novel distributed event detection system.
+Residential power quality monitoring presents a number of issues. First of all, it is difficult to discern which side of the utility meter a power disturbance came from. Consider a voltage sag generated by a 1kW hot plate shown in Figure \ref{intro:fig1:sub1}.  Since the output impedance of the power grid is non-zero a high powered device can cause a significant voltage sag affecting every device connected to the same circuit. Secondly, recoding the voltage waveform resulting from non linear load can result in privacy leaks for the end user. Consider the voltage waveform produced by a PC running a video game as shown in Figure \ref{intro:fig1:sub2}. Throughout the game loading process the power load varies based on which components are in use. Furthermore, regions with CPU load, harddisk load and video card load can be readily identified by measuring the resulting voltage sag. Recording these event's has an adverse effect on end-users privacy and offers no immediate benefit in studying grid stability. Finally distributed power generation such as rooftop solar has significant effect on the residential voltage waveform. Consider the voltage waveform shown in Figure \ref{intro:fig1:sub3}. This waveform was recorded over 24 hours in a household with a rooftop photovoltaic installation. Similar to the voltage sag case since the power grid impedance is non-zero residential power generation will cause a voltage swell during peak hours of sunlight as evident by the waveform. Combined with the global voltage sag during hours of peak demand (3pm) combined with the lack of PV production during that time, photovoltaics installations can result in a daily $10V_{rms}$ swing. Residential power quality monitoring can be accomplished via a distributed sensor network made up of power quality monitoring devices with high degree of penetration across the end points of a power grid. Furthermore, in order to monitor the dynamics of the entire power grid via residential line voltage monitoring it is imperative to monitor across multiple locations simultaneously. This combined with temporal and spatial correlations of data produced by the sensors allows for identification of grid wide anomalies without a high rate of false positives. Additionally, not all power quality events affect the entire grid, due to the hierarchical structure of the power distribution. The final requirement for grid-wide monitoring is a novel distributed event detection system.
 
 \section{Edge computing approach to power quality monitoring.}
 
@@ -91,11 +91,11 @@ The main disadvantage of this method is that while there are plenty of power qua
 
 Today`s big data world is plagued with the issues of data cleaning and validation, even though it`s being relied on for timely, accurate and actionable intelligence. With large ingress of unstructured data these issues are unavoidable, and preprocessing will remain a large portion of the analysis workload. However, in the case of sensor networks designed for a specific purpose, the tasks of anomaly detection can be pushed to the edge of the network using the Napali methodology. The claim of this thesis is that Napali provides novel architecture that is both a feasible solution to the problem of distributed power quality monitoring and which also provides significant benefits over the two standard alternative architectures (all computation/storage at nodes, all computation/storage at the sink).
 
-To evaluate the feasibility of the Napali framework, I propose to implement it as part of the Open Power Quality system and apply it to the problems of power quality monitoring. Combined with the higher level anomaly analysis, Napali provides important services for a OpenPowerQuality (OPQ) power quality monitoring network. This network is made up of a group  monitoring devices as well as a centralized data sink server. This system will be deployed for testing at the University of Hawaii at Manoa campus, by deploying power quality monitors across at least 20 buildings on campus. The University of Hawaii at Manoa campus is a unique testbed for such a network, since entire campus is isolated to it's own microgrid, connected to the municipal Oahu grid via a 46kV feeder. Furthermore, University of Hawaii has deployed a set of smart power monitors at the key positions in the grid, which can be used as a state of the art ground truth for evaluation of OPQ performance. 
+To evaluate the feasibility of the Napali framework, I propose to implement it as part of the Open Power Quality system and apply it to the problems of power quality monitoring. Combined with the higher level anomaly analysis, Napali provides important services for a OpenPowerQuality (OPQ) power quality monitoring network. This network is made up of a group of monitoring devices as well as a centralized data sink server. This system will be deployed for testing at the University of Hawaii at Manoa campus, by deploying power quality monitors across at least 20 buildings on campus. The University of Hawaii at Manoa campus is a unique testbed for such a network, since entire campus is isolated to its own microgrid, connected to the municipal Oahu grid via a 46kV feeder. Furthermore, University of Hawaii has deployed a set of smart power monitors at the key positions in the grid, which can be used as a state of the art ground truth for evaluation of OPQ performance. 
 
-The system relies on a custom residential power quality monitor called OPQ Box, designed specifically for distributed monitoring using Napali framework. Instead of performing local analysis on the voltage waveform with the aim of PQ anomaly detection, or forwarding all the recording measurements to the centralized sink, OPQ boxes computes a small subset of features on the input voltage waveform. These features are then forwarded to the Napali framework`s centralized sink which performs the anomaly detection on reduced data, while the raw waveform is retained for a short time on the OPQ Box. If the sink determines that a possible anomaly has occurred, a request is sent to the affected and nearby devices for raw data.
+The system relies on a custom residential power quality monitor called OPQ Box, designed specifically for distributed monitoring using Napali framework. Instead of performing local analysis on the voltage waveform with the aim of PQ anomaly detection, or forwarding all the recording measurements to the centralized sink, OPQ boxes computes a small subset of features on the input voltage waveform. These features are then forwarded to the Napali framework's centralized sink which performs the anomaly detection on reduced data, while the raw waveform is retained for a short time on the OPQ Box. If the sink determines that a possible anomaly has occurred, a request is sent to the affected and nearby devices for raw data.
 
-The goal of Napali is not to provide a low rate of false positives for a particular type of a power quality disturbance. Indeed, once the raw data is acquired by the sink, filtering through the potential anomalies is trivial using well established methods. Instead, the focus of my detection system is balancing a low bandwidth required for detection with the low rate of false negatives. Furthermore, monitoring at the leaf edges relies on the hierarchical nature of the power grid in order to ascertain the state of the entire power generation and delivery system. As noted in the literature, power quality disturbances tend to propagate down the hierarchy as shown in Figure \ref{intro:fig2}. 
+The goal of Napali is not to provide a low rate of false positives for a particular type of a power quality disturbance. Indeed, once the raw data is acquired by the sink, filtering through the potential anomalies is trivial using well established methods. Instead, the focus of my detection system is balancing low bandwidth required for detection with the low rate of false negatives. Furthermore, monitoring at the leaf edges relies on the hierarchical nature of the power grid in order to ascertain the state of the entire power generation and delivery system. As noted in the literature, power quality disturbances tend to propagate down the hierarchy as shown in Figure \ref{intro:fig2}. 
 
 Consider a lightning strike on a hypothetical 12kV feeder line in a hierarchical power grid. The directly affected devices will be the ones downstream from the disturbance. These devices will experience the most severe effects, most notably transients, as they propagate throughput the power delivery infrastructure. The indirectly affected devices will expedience a power anomaly mainly attributed to the power production entities trying to compensate for the large disturbance caused by the lightning strike. Thus, monitoring of the leaf edges of the power delivery system can in principle provide insights into the disturbances that originate deep inside the power distribution network.
 
@@ -106,14 +106,14 @@ The OpenPowerQuality system is designed to be a test bed for development of new 
     
 	\item \textbf{Effects of latency are minimized:}  Latency limits of the triggering system will be examined. Since these are heavily dependent on the raw data storage ability of the OPQ Box, latency effects will be tested under various amount of memory allocated for this task. A more detailed description of this evaluation can be found in Section \ref{iexp:sec:lat}.
   
-	\item \textbf{Sink processing requirements are minimized:} Synthetic benchmarks will be carried out on the sink node to determine the scalability of the triggering system. These scalability metrics will be compared with a synthetic benchmark of running multiple copies of the OPQ Box analysis software on the same node. This will allow me to compare the scalability of the sink node in the case of sending the entirety of raw data stream versus the Napali frameworks approach of only sending extracted metrics. A more detailed description of this evaluation can be found in Section \ref{iexp:sec:scale}.
-  
   \item \textbf{Temporal locality:} Data acquired from the UH building level meters will be compared with the data acquired via the Napali triggering framework.  This will allow me to establish the rate of false positives and negatives and evaluate the temporal locality triggering algorithm. Furthermore, the single location events, which are normally rejected by Napali will also be examined and compared to the data provided by the building power meters. A more detailed description of this evaluation can be found in Section \ref{iexp:sec:loc}.
+
+  \item \textbf{Sink processing requirements are minimized:} Synthetic benchmarks will be carried out on the sink node to determine the scalability of the triggering system. These scalability metrics will be compared with a synthetic benchmark of running multiple copies of the OPQ Box analysis software on the same node. This will allow me to compare the scalability of the sink node in the case of sending the entirety of raw data stream versus the Napali frameworks approach of only sending extracted metrics. A more detailed description of this evaluation can be found in Section \ref{iexp:sec:scale}.
 
 	\item \textbf{Sub-threshold data acquisition:} Evaluation of the sub-threshold data acquisition will performed in two ways. First, the triggering stream from the OPQ Boxes will be stored along with the acquired raw data. The triggering stream can be used to compute which fraction of devices would have self triggered if operating autonomously. Next the building level meters self triggering capabilities, will be compared to the Napali, sub-threshold triggering in order to compare Napali to a commercially deployed system. A more detailed description of this evaluation can be found in Section \ref{iexp:sec:sub}.
   
 \end{enumerate}
-Although power failure resiliency and flexible privacy are claimed benefits of the Napali architecture, they will not be evaluated as part of this thesis research. Flexible privacy would require a much larger deployment, and a user study, which is not possible with the current level of funding. Furthermore the power failure resilience of the Napali framework would require a significant development effort in development of the battery management system. Since complete power failures are quite rare, there is no guarantee that a single power outage would occur at the UH campus during the deployment. 
+Although power failure resiliency and flexible privacy are claimed benefits of the Napali architecture, they will not be evaluated as part of this thesis research. Flexible privacy would require a much larger deployment, and a user study, which is beyond the scope of this project. Furthermore the power failure resilience of the Napali framework would require a significant development effort in development of the battery management system. Since complete power failures are quite rare, there is no guarantee that a single power outage would occur at the UH campus during the deployment. 
 
 The last claim of this dissertation is that the Napali architecture, can be applied to other domains. Once the Napali framework is fully characterized, and it`s strengths and weaknesses are well understood, I intend to perform an in-depth literature review of other domains which could benefit from Napali-like approach of event detection.
 
