--- a/opq.tex
+++ b/opq.tex
@@ -6,7 +6,7 @@
   \label{fig:1}
 \end{figure}
 
-OpenPowerQuality (OPQ) power quality monitoring network utilizes residential power quality meters, called OPQ Boxes, in order to detect anomalies in the electricity distribution accross the Oahu power grid. In addition to OPQ Boxes, the OPQ project utilizes a cloud based aggregation services for power quality event detection, classification and display. The block diagram of the OPQ network is shown in Figure \ref{fig:1} .
+Open Power Quality (OPQ) power quality monitoring network utilizes residential power quality meters, called OPQ Boxes, in order to detect anomalies in the electricity distribution across the Oahu power grid. In addition to OPQ Boxes, the OPQ project utilizes cloud-based aggregation services for power quality event detection, classification and display. The block diagram of the OPQ network is shown in Figure \ref{fig:1} .
 
 The major components of OPQ are:
 \begin {itemize}
@@ -35,13 +35,13 @@ OPQ Box is an in-house designed power quality meter which focuses on providing t
 	  \caption{OPQ Box2 in an acrylic enclosure.}
 	  \label{fig2:sub2}
 	\end{subfigure}
-	\caption{(a)OPQ Box2 block diagram and (b)production OPQ box ready for deployment}
+	\caption{(a) OPQ Box2 block diagram and (b) production OPQ box ready for deployment}
 	\label{fig:2}
 \end{figure}
 
-The power system of the OPQ box2 electrically isolates most of the device from the AC mains power. An isolated AC-DC converter generates $5V_{dc}$ from the mains $120V_{ac}$. 5V is used to power the Raspberry Pi, equipment connected to the expansion port, 3.3V regulators and voltage reference and an isolated DC/DC converter. 3.3V is used to power the isolated end of the isolation amplifier as well as the STM32F3 analog to digital converter/digital signal processor(ADC/DSP). The hot side of the isolation amplifier is powered from the isolated DC/DC converter. This allows OPQ box to function with the battery attached to the expansion port, so that it may retain data and continue to operate during a power outage. 
+The power system of the OPQ box2 electrically isolates most of the device from the AC mains power. An isolated AC-DC converter generates $5V_{dc}$ from the mains $120V_{ac}$. 5V is used to power the Raspberry Pi, equipment connected to the expansion port, 3.3V regulators and voltage reference and an isolated DC/DC converter. 3.3V is used to power the isolated end of the isolation amplifier as well as the STM32F3 analog to digital converter/digital signal processor (ADC/DSP). The hot side of the isolation amplifier is powered from the isolated DC/DC converter. This allows OPQ box to function with the battery attached to the expansion port, so that it may retain data and continue to operate during a power outage. 
 
-The analog signal path of the OPQ Box2 is complicated by the fact that the STM32F3 ADC/DSP is electrically isolated from the mains power. Previous iteration of the OPQ Box, OPQ Box1, overcame this by employing small circuit board mount isolation transformer. Unfortunately it was found that the frequency response of these transformers varied wildly between individuals, thus incurring a lengthy calibration process for each device. Design on the OPQ Box2 solved this issue by using an AMC1100 isolation amplifier as the isolation component. Internally AMC1100 consists of a single die comprised of a $\Sigma\Delta$ analog to digital and digital to analog converters. These converters are separated by a silicon glass region on the integrated circuit which acts as a coupling capacitor. Since the signal passes the isolation boundary as a $\Sigma\Delta$ encoded digital signal, it incurs no distortion and no additional calibration is required. In order to match the dynamic range of the AMC1100 the $120V_{ac}$ is passed through the resistor divider to attenuate it to $120mV_{ac}$. The input and output of the isolation amplifier is filtered with a passive first order anti-aliasing filter. Isolated signal is then digitized via a 16bit ADC of the STM32F3 DSP at $12 KSps$, which gives 200 data samples per grid cycle. Internally digitization process runs asynchronously with the respect to the the DSP CPU, in order to minimize timing jitter. It was verified that the sampling jitter of the ADC is less then 1us, however due to limited precision of equipment an exact figure was not established. Data stream in its digital form is transfered to the Raspberry Pi single board computer(SBC) for analysis.
+The analog signal path of the OPQ Box2 is complicated by the fact that the STM32F3 ADC/DSP is electrically isolated from the mains power. A previous iteration of the OPQ Box, OPQ Box1, overcame this by employing small circuit board mount isolation transformer. Unfortunately it was found that the frequency response of these transformers varied wildly between individuals, thus incurring a lengthy calibration process for each device. Design on the OPQ Box2 solved this issue by using an AMC1100 isolation amplifier as the isolation component. Internally AMC1100 consists of a single die comprised of a $\Sigma\Delta$ analog to digital and digital to analog converters. These converters are separated by a silicon glass region on the integrated circuit which acts as a coupling capacitor. Since the signal passes the isolation boundary as a $\Sigma\Delta$ encoded digital signal, it incurs no distortion and no additional calibration is required. In order to match the dynamic range of the AMC1100 the $120V_{ac}$ is passed through the resistor divider to attenuate it to $120mV_{ac}$. The input and output of the isolation amplifier is filtered with a passive first order anti-aliasing filter. Isolated signal is then digitized via a 16bit ADC of the STM32F3 DSP at $12 KSps$, which gives 200 data samples per grid cycle. Internally digitization process runs asynchronously with the respect to the the DSP CPU, in order to minimize timing jitter. It was verified that the sampling jitter of the ADC is less then 1us, however due to limited precision of equipment an exact figure was not established. Data stream in its digital form is transfered to the Raspberry Pi single board computer (SBC) for analysis.
 
 \begin{figure}[h]
   \begin{center}
@@ -51,9 +51,9 @@ The analog signal path of the OPQ Box2 is complicated by the fact that the STM32
   \label{fig:3}
 \end{figure}
 
-Raspberry Pi SBC is responsible for signal analysis and anomaly detection. Raspberry Pi model used in OPQ Box is the Pi Zero W equipped with 256MB of main memory and a single core 1GHz ARM11 CPU. Furthermore, Pi Zero W is equipped with an on-board 802.11n WIFI transceiver, which removes the need for an external WIFI dongle used in previous OPQ Box devices. The software stack of the Raspberry Pi aims to deliver a full featured power quality analysis framework despite its rather limited hardware capabilities. A block diagram of the software stack is shown in Figure \ref{fig:3}. Digital data is transfered from the DSP to the Raspberry Pi via Serial Peripheral Interface, with the Pi acting as the master and the DSP as a slave device. A hardware interrupt line is used to inform Pi software that the DSP is ready for the data transfer. During the initial design of the OPQ box 2 software, SPI data transfer was attempted in userland. However due to the lack of support for DMA in the SPI kernel-to-userland bridge, a large portion of the CPU time was spent facilitating data transfer, resulting in degraded analysis performance as well as missed data samples. Current revision of the OPQ Box 2 software stack utilizes a kernel driver for management of SPI bus. Internally OPQ driver maintains a ring buffer of 16 windows each 200 data samples in size. Upon the receiving the interrupt for the DSP, the CPU sets up the DMA transfer and the DMA engine transfers a 200 sample window into the kernel memory without CPU interaction. This scheme requires the CPU to only service 60 interrupts a second, with each interrupt requiring on the order of 100 instructions, yielding the CPU utilization of less then $1\%$ in normal operation. Userland applications communicate with the kernel driver using a file descriptor, where every $write$ system call yields 200 samples of raw waveform. Thus the smallest window that a userland application will process is a single AC cycle of the grid mains.
+Raspberry Pi SBC is responsible for signal analysis and anomaly detection. The Raspberry Pi model used in OPQ Box is the Pi Zero W equipped with 256MB of main memory and a single core 1GHz ARM11 CPU. Furthermore, Pi Zero W is equipped with an on-board 802.11n WIFI transceiver, which removes the need for an external WIFI dongle used in previous OPQ Box devices. The software stack of the Raspberry Pi aims to deliver a full featured power quality analysis framework despite its rather limited hardware capabilities. A block diagram of the software stack is shown in Figure \ref{fig:3}. Digital data is transfered from the DSP to the Raspberry Pi via Serial Peripheral Interface, with the Pi acting as the master and the DSP as a slave device. A hardware interrupt line is used to inform Pi software that the DSP is ready for the data transfer. During the initial design of the OPQ box 2 software, SPI data transfer was attempted in userland. However due to the lack of support for DMA in the SPI kernel-to-userland bridge, a large portion of the CPU time was spent facilitating data transfer, resulting in degraded analysis performance as well as missed data samples. Current revision of the OPQ Box 2 software stack utilizes a kernel driver for management of SPI bus. Internally OPQ driver maintains a ring buffer of 16 windows each 200 data samples in size. Upon the receiving the interrupt for the DSP, the CPU sets up the DMA transfer and the DMA engine transfers a 200 sample window into the kernel memory without CPU interaction. This scheme requires the CPU to only service 60 interrupts a second, with each interrupt requiring on the order of 100 instructions, yielding the CPU utilization of less then $1\%$ in normal operation. Userland applications communicate with the kernel driver using a file descriptor, where every $write$ system call yields 200 samples of raw waveform. Thus the smallest window that a userland application will process is a single AC cycle of the grid mains.
 
-Userland component of the OPQ Box 2 software is a milti-threaded extensible analysis framework called Triggering. The reader thread is responsible for transferring and accumulating data from the kernel driver. The smallest data buffer that the Triggering application processes at any given time is 10 grid cycles or 2k samples. Once the cycles are transfered to the userland and timestamped, they are passed to the analysis thread for feature extraction, as well as to the Raw Data Ring Buffer(RDRB). Since internally all data is addressed using shared pointers so during data duplication no copying is required. RDRS is capable of buffering up to an hour of historic data before it's overwritten resulting in the RDBS maximum size of 100MB. 
+Userland component of the OPQ Box 2 software is a multi-threaded extensible analysis framework called Triggering. The reader thread is responsible for transferring and accumulating data from the kernel driver. The smallest data buffer that the Triggering application processes at any given time is 10 grid cycles or 2k samples. Once the cycles are transfered to the userland and timestamped, they are passed to the analysis thread for feature extraction, as well as to the Raw Data Ring Buffer (RDRB). Since internally all data is addressed using shared pointers, during data duplication no copying is required. RDRS is capable of buffering up to an hour of historic data before it's overwritten resulting in the RDBS maximum size of 100MB. 
 
 Analysis thread of the Triggering application performs feature extraction of the raw data windows of 2000 samples. At the moment only two metrics are calculated:
 \begin{itemize}
@@ -92,13 +92,13 @@ Fundamental frequency is calculated by computing the zero crossings of the AC wa
 	  \caption{}
 	  \label{fig4:sub4}
 	\end{subfigure}
-	\caption{Filters used for mains frequency calculation. (a)Downsampling filter gain. (b)Downsampling filter impulse response. (c)Lowpass filter gain. (d)Lowpass filter impulse response.}
+	\caption{Filters used for mains frequency calculation. (a) Downsampling filter gain. (b) Downsampling filter impulse response. (c) Lowpass filter gain. (d) Lowpass filter impulse response.}
 	\label{fig:4}
 \end{figure}
 
-Where the $\Delta t_{k}$ is the k'th time between two adjacent zero crossings. In order to improve the accuracy of the frequency calculation one must first filter out as much of out of phase noise as possible. Since our sampling rate is quite high(12kSps) and the fundamental frequency is quite low (60Hz) it is very computationally expensive to perform this filtering in a single step. Instead filtering is accomplished via a set of two finite impulse response(FIR) filters shown in Figure \ref{fig4:sub2} and \ref{fig4:sub4}. First the Down sampling filter is applied to the raw waveform, which results in the frequency response shown in Figure \ref{fig4:sub1}. As is evident by the plot the frequency content of the result is 0-600Hz, Thus it can be downsampled to the $\frac{N}{10}$, or 200 samples without aliasing. Next the low pass filter is applied to the downsampled waveform with the frequency response shown in Figure \ref{fig4:sub3}.This resulting frequency content is 0-100Hz, thus all of the higher frequency harmonics and noise are removed. Finally the twice filtered downsampled waveform is used to estimate the fundamental frequency according to the Equation \ref{eq:1}. The zero crossings themselves were calculated by using linear interpolation between two points which bracket the time axis.
+Where the $\Delta t_{k}$ is the k'th time between two adjacent zero crossings. In order to improve the accuracy of the frequency calculation one must first filter out as much of out of phase noise as possible. Since our sampling rate is quite high (12kSps) and the fundamental frequency is quite low (60Hz) it is very computationally expensive to perform this filtering in a single step. Instead filtering is accomplished via a set of two finite impulse response (FIR) filters shown in Figure \ref{fig4:sub2} and \ref{fig4:sub4}. First the Down sampling filter is applied to the raw waveform, which results in the frequency response shown in Figure \ref{fig4:sub1}. As is evident by the plot the frequency content of the result is 0-600Hz, Thus it can be downsampled to the $\frac{N}{10}$, or 200 samples without aliasing. Next the low pass filter is applied to the downsampled waveform with the frequency response shown in Figure \ref{fig4:sub3}.This resulting frequency content is 0-100Hz, thus all of the higher frequency harmonics and noise are removed. Finally the twice filtered downsampled waveform is used to estimate the fundamental frequency according to the Equation \ref{eq:1}. The zero crossings themselves were calculated by using linear interpolation between two points which bracket the time axis.
 
-In order to verify the error in our frequency measurement, a function generator(SIGLENT SDG1025) was used to inject a $60Hz$ $120mV_{pp}$ superimposed with $1\%$ white noise into the input of the AMC1100 anti-aliasing filter, bypassing the voltage divider. The resulting frequencies were calculated and recorded by the OPQ Box 2 and histogramed as shown in Figure \ref{fig5:sub1}. It was found that the OPQ Box 2 overestimated the frequency by $300\mu Hz$ with $\sigma  = 230\mu Hz$. All electrical generation systems connected to the grid run synchronously with each other, meaning that while small variations in voltage are common across locations, the fundamental frequency and phase must remain strictly in sync. This effect is demonstrated in Figure \ref{fig5:sub2}, which is a frequency fluctuation event recorded on November 8 2017. While the two devices were separated by ten miles, their frequency measurements track closely together.
+In order to verify the error in our frequency measurement, a function generator (SIGLENT SDG1025) was used to inject a $60Hz$ $120mV_{pp}$ superimposed with $1\%$ white noise into the input of the AMC1100 anti-aliasing filter, bypassing the voltage divider. The resulting frequencies were calculated and recorded by the OPQ Box 2 and histogramed as shown in Figure \ref{fig5:sub1}. It was found that the OPQ Box 2 overestimated the frequency by $300\mu Hz$ with $\sigma  = 230\mu Hz$. All electrical generation systems connected to the grid run synchronously with each other, meaning that while small variations in voltage are common across locations, the fundamental frequency and phase must remain strictly in sync. This effect is demonstrated in Figure \ref{fig5:sub2}, which is a frequency fluctuation event recorded on November 8 2017. While the two devices were separated by ten miles, their frequency measurements track closely together.
 
 \begin{figure}[h]
 		\centering
@@ -114,11 +114,11 @@ In order to verify the error in our frequency measurement, a function generator(
 	  \caption{}
 	  \label{fig5:sub2}
 	\end{subfigure}
-	\caption{Filters used for mains frequency calculation. (a)Downsampling filter gain. (b)Downsampling filter impulse response. (c)Lowpass filter gain. (d)Lowpass filter impulse response.}
+	\caption{Filters used for mains frequency calculation. (a) Downsampling filter gain. (b) Downsampling filter impulse response. (c) Lowpass filter gain. (d) Lowpass filter impulse response.}
 	\label{fig:5}
 \end{figure}
 
-Root mean square voltage($V_{rms}$) in electrical power is the equivalent value of DC voltage which would dissipate the same power in the resistive load. $V_{rms}$ is a convenient measure for detecting voltage sags and swells, since they result in nominally higher and lower computed value. For the sinusoidal signal $V_{rms}$ can be calculated from the peak to peak value($V_{pp}$) as:
+Root mean square voltage ($V_{rms}$) in electrical power is the equivalent value of DC voltage which would dissipate the same power in the resistive load. $V_{rms}$ is a convenient measure for detecting voltage sags and swells, since they result in nominally higher and lower computed value. For the sinusoidal signal $V_{rms}$ can be calculated from the peak to peak value ($V_{pp}$) as:
 \begin{equation} \label{eq:2}
 	V_{rms} = \frac{V_{pp}}{2\sqrt{2}}
 \end{equation}
@@ -142,7 +142,7 @@ Similarly to the frequency calculation OPQ Box 2 will use a 10 cycle window for 
 	  \caption{}
 	  \label{fig6:sub2}
 	\end{subfigure}
-	\caption{A lightning strike recorded by two OPQ Box 2 devices separated by 10 miles. (a)A lightning strike manifested as $V_{rms}$ dip which lated 11 cycles. (b) As a consequence of using NTP these devices have $\frac{1}{2}$ cycle mismatch in reported timestamps.}
+	\caption{A lightning strike recorded by two OPQ Box 2 devices separated by 10 miles. (a) A lightning strike manifested as $V_{rms}$ dip which lated 11 cycles. (b) As a consequence of using NTP these devices have $\frac{1}{2}$ cycle mismatch in reported timestamps.}
 	\label{fig:6}
 \end{figure}
 
@@ -152,9 +152,11 @@ If the aggregation service determines that an anomaly has occurred, it is able t
 
 In order to make a distributed measurement, all of the OPQ Boxes on the OPQ network need to maintain an accurate time reference. Time synchronization across multiple OPQ Boxes is accomplished using the Network Time Protocol. The expansion port of the OPQ Box 2 supports a GPS receiver, however using it is detrimental to the OPQ Box 2 utility. GPS receivers require line of sight to the sky, and since the with out on-board real-time clock, every power interruption requires a GPS cold start. NTP performance has been verified against GPS resulting in time error of $8ms\pm 5ms$ which is typical for NTP running over the Internet with a close by NTP server. This error is visualized in a Figure \ref{fig6:sub2}. With a large coincidental $V_{pp}$ drop across two devices, a 7ms phase error is clearly visible.
 
+During the evaluation phase of the OPQ Box a new metric based on wavelet decomposition will be developed for detection of transients. This will allow the OPQ Box to detect slow voltage fluctuations using $V_{rms}$, and fast changes using the new wavelet metric.
+
 \section{OPQ Makai}
 
-OPQ Makai implements the Napali Framework requirements for a "sink".  It is a distributed extensible microservice framework responsible for receiving the triggering stream from the OPQ Boxes, locating anomalous temporal regions and requesting raw waveform for the anomalous time ranges. As evident from the block diagram shown in Figure \ref{fig:7}, Makai consists of three major components: Acquisition Broker, Triggering Broker, and the Acquisition Service. 
+OPQ Makai implements the Napali Framework requirements for a ``sink''.  It is a distributed extensible microservice framework responsible for receiving the triggering stream from the OPQ Boxes, locating anomalous temporal regions and requesting raw waveform for the anomalous time ranges. As evident from the block diagram shown in Figure \ref{fig:7}, Makai consists of three major components: Acquisition Broker, Triggering Broker, and the Acquisition Service. 
 \begin{figure}[h]
   \begin{center}
   \includegraphics[width=0.6\textwidth]{img/makai_main.pdf}
@@ -214,7 +216,7 @@ Once the anomaly is classified by OPQ Mauka, and the power quality characteristi
 
 \section{OPQ View}
 
-OPQ View is the primary user interface to the OPQ echosystem. View is written in JavaScript using the Meteor framework, and provides a robust and easy to use interface to the OPQ Box triggering stream, Makai triggering anomalies, and to the Mauka PQ disturbances. Furthermore, View provides an administration interface for initial setup and maintenance of the OPQ devices, and services. Finally OPQ View monitors the health of the OPQ components, keeping track of the individual box uptimes, and component failures. A screenshot of the recent OPQ View build is shown in Figure \ref{fig:9}
+OPQ View is the primary user interface to the OPQ ecosystem. View is written in JavaScript using the Meteor framework, and provides a robust and easy to use interface to the OPQ Box triggering stream, Makai triggering anomalies, and to the Mauka PQ disturbances. Furthermore, View provides an administration interface for initial setup and maintenance of the OPQ devices, and services. Finally OPQ View monitors the health of the OPQ components, keeping track of the individual box uptimes, and component failures. A screenshot of the recent OPQ View build is shown in Figure \ref{fig:9}
 
 \begin{figure}[h]
   \begin{center}
