--- a/proposal.tex
+++ b/proposal.tex
@@ -87,10 +87,10 @@ Matthias Fripp
 
 \input{litreview.tex}
 
-\chapter{OpenPowerQuality}
+\chapter{Open Power Quality}
 \input{opq.tex}
 
-\chapter{Experimental Design}
+\chapter{Evaluation}
 \input{expdes.tex}
 
 
